fix for data sort, pagination when using mongoDb and postgreSql

--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -78,7 +78,7 @@
 </div>
 
 <app-modal-window [(visible)]="showDialog">
-    <h1 class="black">Please wait data is load!</h1>
+    <h1 class="black">Please wait, data is load!</h1>
     <spinner-component [spinnerShow]="showDialog">
         <div class="spinner">
             <div class="double-bounce1"></div>
