--- a/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/BooksListPage.xaml
+++ b/LibraryAppCore.XF.Client/LibraryAppCore.XF.Client/Views/BooksListPage.xaml
@@ -13,24 +13,32 @@
             <StackLayout x:Name="labelStack" Orientation="Horizontal">
                 <Label Text="Books List" FontSize="Large"  Margin="10" />
             </StackLayout>
-            <Button Text="Add Book" Command="{Binding CreateBookCommand}" FontSize="Medium" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" />
+            <Button Text="Add Book" Command="{Binding CreateBookCommand}" FontSize="Medium" BorderWidth="1" HorizontalOptions="Start" VerticalOptions="Start" Margin="10" TextColor="White" BackgroundColor="#4cae4c"/>
+            <StackLayout x:Name="Header" Orientation="Horizontal">
+                <Label Text="Id" FontSize="Medium" Margin="10" />
+                <Label Text="Year" FontSize="Medium" Margin="10" />
+                <Label Text="Name" FontSize="Medium" Margin="10" />
+                <Label Text="Description" FontSize="Medium" Margin="10" />
+                <Label Text="AuthorId" FontSize="Medium" Margin="10" />
+            </StackLayout>
             <ListView ItemsSource="{Binding Books}"
-                      SelectedItem="{Binding SelectedBook, Mode=TwoWay}" HasUnevenRows="True" />
+                      SelectedItem="{Binding SelectedBook, Mode=TwoWay}" HasUnevenRows="True">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
-                            <StackLayout>
-                                <Label Text="{Binding BookId}" FontSize="Medium" />
-                                <Label Text="{Binding Year}" FontSize="Medium" />
-                                <Label Text="{Binding Name}" FontSize="Medium" />
-                                <Label Text="{Binding Description}" FontSize="Medium" />
-                                <Label Text="{Binding AuthorId}" FontSize="Medium" />
+                                <StackLayout Orientation="Horizontal">
+                                    <Label Text="{Binding Id}" FontSize="Medium" Margin="10" />
+                                    <Label Text="{Binding Year}" FontSize="Medium" Margin="10" />
+                                    <Label Text="{Binding Name}" FontSize="Medium" Margin="10" />
+                                    <Label Text="{Binding Description}" FontSize="Medium" Margin="10" />
+                                    <Label Text="{Binding AuthorId}" FontSize="Medium" Margin="10" />
                             </StackLayout>
                         </ViewCell.View>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
